Skip to content

macosx: (4.0) Playing video has green line

Use vlc4 to play this video on mac. There is a green line on the right. It seems that the width and height of decoding and display are not aligned.

This is a reproduce video:https://drive.google.com/file/d/1bOFo0Bgha8DVksEdmxlSd2ZLx6mz8DXt/view

info:main video output: original format sz 544x960, of (0,0), vsz 540x960, 4cc CVPN, sar 1:1, orient: normal

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information